--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.8.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
   },
   "engines": {
@@ -32,6 +32,7 @@
     "@types/express": "^5.0.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "viem": "^2.28.0"
   }
 }
