--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SUPABASE_URL="https://xxxxxx.supabase.co"
 SUPABASE_KEY="eyxxxxx"
-SUPABASE_INSTANCE="xxxxxxx"
+CAMUNDA_API_URL="http://localhost:8080/engine-rest"
