--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "crypto-estate-key-storage",
   "version": "0.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "build": "tsc",
+    "dev": "tsx src/index.ts",
     "supa:generate": "env-cmd pnpx supabase gen types --lang=typescript --project-id nsnhvunqtpgbtyriqido > ./src/types/database.ts"
   },
   "keywords": [],
@@ -19,7 +21,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
-    "nodemon": "^2.0.15",
+    "open": "^10.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
@@ -29,10 +31,16 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tsconfig/node-lts": "^22.0.1",
+    "@tsconfig/node-ts": "^23.6.1",
+    "@types/camunda-external-task-client-js": "^1.3.6",
     "@types/express": "^5.0.1",
+    "camunda-external-task-client-js": "^3.1.0",
+    "consola": "^3.4.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "tsx": "^4.19.4",
     "viem": "^2.28.0"
   }
 }
