--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "kafkajs": "^2.2.4",
     "tsx": "^4.19.4",
+    "uuid": "^11.1.0",
     "viem": "^2.28.0"
   }
 }
